--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -77,15 +77,13 @@ Valence, also known as hedonic tone, is a characteristic of emotions that determ
   {denae-ford}
   {We observe that both \ul{social} and \ul{technical} aspects are being taken into consideration when deciding upon pull request acceptance. Moreover, we observe that many \ul{more} social aspects are being considered during the experiment than \ul{reported} during the post-experiment survey.}
   {ford2019beyond}
-
 \pitch{
   \begin{multicols}{2}
   \includegraphics[width=.9\linewidth]{eyes.png}
   \source{ford2019beyond}
   \par\columnbreak\par
   GitHub is increasing size of the avatar images and emphasizing a developer's ``personal brand'' by spotlighting features such as the contribution heat map. In the future, platform designers must be more mindful in balancing the power of signals that can amplify bias or harm against users, while still providing the mechanisms for users to freely evaluate the merits of potential code contributions.
-  \end{multicols}
-}
+  \end{multicols}}
 
 \thought{Be a leader and a boss of a pull request --- be the one who cares}
 
