--- a/main.bib
+++ b/main.bib
@@ -535,3 +535,23 @@
   organization={ACM, Lisbon, Portugal},
   doi={10.1145/3643991.3644877}
 }
+
+
+@inproceedings{rigby2013convergent,
+  title={{Convergent Contemporary Software Peer Review Practices}},
+  author={Rigby, Peter C. and Bird, Christian},
+  booktitle={{Proceedings of the 9th Joint Meeting on Foundations of Software Engineering}},
+  pages={202--212},
+  year={2013}
+}
+
+@article{rigby2012contemporary,
+  title={{Contemporary Peer Review in Action: Lessons from Open Source Development}},
+  author={Rigby, Peter and Cleary, Brendan and Painchaud, Frederic and Storey, Margaret-Anne and German, Daniel},
+  journal={{IEEE Software}},
+  volume={29},
+  number={6},
+  pages={56--61},
+  year={2012},
+  publisher={IEEE}
+}
