--- a/osbp.sty
+++ b/osbp.sty
@@ -35,6 +35,9 @@
 \RequirePackage{booktabs}
 \RequirePackage{graphicx}
 
+\usepackage{silence}
+  \WarningFilter{bibentry}{You have used \nobibliography*}
+
 \newcommand\osbpTitlePage[2]{\begin{pptMiddle}%
   \pptTitle{\thetitle}{}\par
   {\scshape Yegor Bugayenko}\par
