--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -30,7 +30,7 @@
 \thought[bugayenko2015blog1222]{Open source must be \ul{the only} way for you to write code.}
 
 \qte
-  [Naveen Raman]
+  [\nospell{Naveen Raman}]
   {naveen-raman}
   {Among the many reasons to contribute to open source, building one's professional \ul{reputation} and signaling one's skills to potential employers are common ones.}
   {raman2020stress}
@@ -43,19 +43,19 @@
 \thought{Be fully prepared for the toxicity of open source terrain.}
 
 \qte
-  [Yulia Tsvetkov]
+  [\nospell{Yulia Tsvetkov}]
   {yulia-tsvetkov}
   {Toxic \ul{language} in open source can manifest in multiple ways, including hate speech and microaggressions found also elsewhere online (e.g., Youtube), but also through open-source-specific displays of \ul{entitlement} and \ul{urgency} related to timing expectations.}
   {raman2020stress}
 
 \qte
-  [Courtney Miller]
+  [\nospell{Courtney Miller}]
   {courtney-miller}
   {Within open source, entitled and demeaning complaints, arrogance, and insults are common forms of \ul{toxicity}.}
   {miller2022did}
 
 \qte
-  [Isabella Ferreira]
+  [\nospell{Isabella Ferreira}]
   {isabella-ferreira}
   {We conducted a qualitative analysis on 1,545 emails from the Linux Kernel Mailing List that were associated with rejected changes. We found that \ul{more than half} (67\%) of the non-technical emails included uncivil features. Particularly, frustration, name calling, and impatience are the most frequent features in uncivil emails. }
   {ferreira2021shut}
@@ -86,31 +86,31 @@
 \thought[bugayenko2020blog0729]{Beautify your profile, start with an anthropomorphic avatar.}
 
 \qte
-  [Kristine Nowak]
+  [\nospell{Kristine Nowak}]
   {kristine-nowak}
   {Avatars that were more \ul{anthropomorphic} were perceived to be more \ul{attractive} and \ul{credible}. The strongest predictor of these variables, however, was the degree of masculinity or femininity (lack of androgyny) of an avatar.}
   {nowak2005influence}
 
 \qte
-  [Josh Terrell]
+  [\nospell{Josh Terrell}]
   {josh-terrell}
   {Surprisingly, our results show that women's contributions tend to be accepted \ul{more often} than men's. However, for contributors who are outsiders to a project and their gender is identifiable, men's acceptance rates are \ul{higher}.}
   {terrell2017gender}
 
 \qte
-  [Reza Nadri]
+  [\nospell{Reza Nadri}]
   {reza-nadri}
   {We have identified that submitters perceptible as Hispanic and Black have 39\% of their pull requests rejected because they are seen as unnecessary, which is 10-12 percentage points more frequent than the rest of perceptible races.}
   {nadri2021insights}
 
 \qte
-  [Nasif Imtiaz]
+  [\nospell{Nasif Imtiaz}]
   {nasif-imtiaz}
   {We found that women did not provide more information on competence and were not generally measured at a stricter standard than men. We observed that women were less likely to express \ul{politeness} and \ul{profanity} than men, and were more restrictive in expressing their \ul{sentiments} on the platform.}
   {imtiaz2019investigating}
 
 \qte
-  [Carolyn D. Egelman]
+  [\nospell{Carolyn D. Egelman}]
   {carolyn-egelman}
   {Being a \ul{new employee} is not a statistically significant predictor of any of our feelings of pushback. Compared to authors at level 1 (entry level), authors at level 3 are 28\% less likely to see conflict in their code review changes.}
   {egelman2020predicting}
@@ -126,7 +126,7 @@
 \pitch{\includegraphics[width=\linewidth]{face-to-face.png}}
 
 \qte
-  [Verena Ebert]
+  [\nospell{Verena Ebert}]
   {verena-ebert}
   {Developers use many channels. Previously, mailing lists were very common. Nowadays, other communication channels become more and more popular, for example, Slack, issue trackers, Twitter or Gitter.}
   {ebert2022communication}
@@ -138,7 +138,7 @@
 \thought{Be aware of robots!}
 
 \qte
-  [Natarajan Chidambaram]
+  [\nospell{Natarajan Chidambaram}]
   {natarajan-chidambaram}
   {Collaborative software development through GitHub repositories frequently relies on bot accounts to automate repetitive and error-prone tasks. This highlights the need to have accurate and efficient bot identification tools.}
   {chidambaram2024rabbit}
@@ -146,13 +146,13 @@
 \thought[bugayenko2020blog0729]{Be polite, especially when you are angry or disagree.}
 
 \qte
-  [Xuan Lu]
+  [\nospell{Xuan Lu}]
   {xuan-lu}
   {Developers who use \ul{emojis} in their posts are significantly less likely to \ul{dropout} from the online work platform.}
   {lu2022emojis}
 
 \qte
-  [Thomas Fackler]
+  [\nospell{Thomas Fackler}]
   {thomas-fackler}
   {Our results show that there is \ul{gravity} in online collaborations on GitHub. Traditional determinants of international trade such as \ul{language barriers} and \ul{country borders} matter for international code contributions.}
   {fackler2020gravity}
@@ -167,7 +167,7 @@
   {laurentsyeva2019friends}
 
 \qte
-  [Justin Middleton]
+  [\nospell{Justin Middleton}]
   {justin-middleton}
   {While we indeed find support for the idea that increases in activity correlate with a higher probability for membership, we also found the particular cases for which more activity can reduce the probability. This underscores the notion that software collaboration is much more than the code itself and that the social components of software should not be undervalued by software teams.}
   {middleton2018contributions}
