--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -28,7 +28,7 @@
 \plush{\osbpTitlePage{4}{}}
 
 \qte
-  [Martin Fowler]
+  [\nospell{\nospell{Martin Fowler}}]
   {martin-fowler}
   {We should remember that \ul{pre-integration} review grew out of an open-source context where contributions appear impromptu from \ul{weakly connected} developers.}
   {fowler2006}
@@ -36,19 +36,19 @@
 \thought{Not only find bugs. Also, educate the author.}
 
 \qte
-  [Andrew Sutherland]
+  [\nospell{Andrew Sutherland}]
   {andrew-sutherland}
   {The meat of the code review dialog, no matter what the medium, is the articulation of design rationale... Engineers find code review dialogs useful for a variety of purposes, but for understanding design rationale more than any other.}
   {sutherland2009can}
 
 \qte
-  [Alberto Bacchelli]
+  [\nospell{Alberto Bacchelli}]
   {alberto-bacchelli}
   {Our results show that, although the top motivation driving code reviews is still \ul{finding defects}, the practice and the actual outcomes are \ul{less} about finding errors than expected: Defect related comments comprise a small proportion and mainly cover small logical low-level issues.}
   {bacchelli2013expectations}
 
 \qte
-  [Peter C. Rigby]
+  [\nospell{Peter C. Rigby}]
   {peter-rigby}
   {Contemporary review is performed regularly and quickly just before the code is committed instead of when a larger work product is complete as in inspection. Contemporary reviewers prefers discussion and fixing code over reporting defects.}
   {rigby2013convergent}
@@ -68,7 +68,7 @@
   \end{multicols}}
 
 \qte
-  [Caitlin Sadowski]
+  [\nospell{Caitlin Sadowski}]
   {caitlin-sadowski}
   {As developers build experience working at Google, the average number of comments on their changes decreases... Developers at Google who have started within the past year typically have more than twice as many comments per change.}
   {sadowski2018modern}
@@ -77,25 +77,25 @@
 \thought[bugayenko2015blog0209]{Raise issues, don't resolve them!}
 
 \qte
-  [Michael Fagan]
+  [\nospell{Michael Fagan}]
   {michael-fagan}
   {The inspection is not intended to redesign, evaluate alternate design solutions, or to find solutions to errors; it is intended \ul{just} to find errors!}
   {fagan1976design}
 
 \qte
-  [Frank A. Ackerman]
+  [\nospell{Frank A. Ackerman}]
   {frank-ackerman}
   {Regardless of the application or the language, you can expect inspections to find from seven to 20 major \ul{defects} per thousand noncomment lines of source code and to find major defects at a \ul{cost} of one to five staff-hours.}
   {ackerman1989software}
 
 \qte
-  [Brendan Cleary]
+  [\nospell{Brendan Cleary}]
   {brendan-cleary}
   {`Raise issues, don't resolve them.' --- this mentality limits a group's ability to \ul{collectively} solve problems and \ul{mentor} developers.}
   {rigby2012contemporary}
 
 \qte
-  [Mateus Freira dos Santos]
+  [\nospell{Mateus Freira dos Santos}]
   {mateus-freira-dos-santos}
   {In software projects with less than 34k lines of code, the number of developers that \ul{never contribute again} after receiving a negative comment on the first pull request is 10.97\%; this number more than doubles to 24.02\% when evaluating projects with more than 197k lines of code.}
   {freira2018analyzing}
@@ -110,7 +110,7 @@
   {raymond1999cathedral}
 
 \qte
-  [Frederic Painchaud]
+  [\nospell{\nospell{Frederic Painchaud}}]
   {frederic-painchaud}
   {To facilitate early and frequent \ul{feedback}, OSS projects tend to review smaller changes than proprietary projects, ranging from 11 to 32 lines in the median case. The small size lets reviewers \ul{focus} on the entire change, and the incrementality reduces reviewers’ preparation time and lets them maintain an overall picture of how the change fits into the system.}
   {rigby2012contemporary}
@@ -122,7 +122,7 @@
 \thought{Rely on the CI status, but not too much}
 
 \qte
-  [Mairieli Wessel]
+  [\nospell{\nospell{Mairieli Wessel}}]
   {mairieli-wessel}
   {Our findings also suggest that the adoption of GitHub Actions leads to more rejections of pull requests (PRs), more communication in accepted PRs and less communication in rejected PRs, fewer commits in accepted PRs and more commits in rejected PRs, and more time to accept a PR.}
   {wessel2023github}
