--- a/osbp.sty
+++ b/osbp.sty
@@ -61,6 +61,9 @@
   }
 }
 \newcommand\source[1]{\par{\scriptsize Source: \bibentry{#1}\par}}
+
+\newcommand\nospell[1]{#1}
+
 \newcounter{thght}
 \newcommand\thought[2][]{
   \addtocounter{thght}{1}
