--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -28,19 +28,19 @@
 \plush{\osbpTitlePage{2}{nLcnE4N3Nz4}}
 
 \qte
-  [Joel Spolsky]
+  [\nospell{Joel Spolsky}]
   {joel-spolsky}
   {Every good bug report needs exactly three things: \ul{steps} to reproduce, what you \ul{expected} to see, and what you \ul{saw} instead.}
   {spolsky2000bugs}
 
 \qte
-  [Nicolas Bettenburg]
+  [\nospell{Nicolas Bettenburg}]
   {nicolas-bettenburg}
   {Well-written bug reports are likely to get \ul{more attention} among developers than poorly written ones... Steps to reproduce and stack traces are most useful in bug reports. The most severe problems encountered by developers are errors in steps to reproduce, incomplete information, and wrong observed behavior.}
   {bettenburg2008makes}
 
 \qte
-  [Tommaso Dal Sasso]
+  [\nospell{Tommaso Dal Sasso}]
   {tommaso-dal-sasso}
   {The elements considered to be harder to provide [while reporting bugs] are the \ul{entity} (e.g., class, file) that likely contains the defect, the \ul{steps} to reproduce the failure, and a \ul{test case} showing the defect.}
   {dal2016makes}
@@ -53,7 +53,7 @@
   {hetzel1993complete}
 
 \qte
-  [Myers, Glenford J.]
+  [\nospell{Myers, Glenford J.}]
   {glenford-myers}
   {You cannot test a program to guarantee that it is error free... It is impractical, often impossible, to find \ul{all} the errors in a program.}
   {myers2012art}
@@ -73,13 +73,13 @@
 More about it by \citet{bugayenko2018blog0206}.}
 
 \qte
-  [Reis Christian]
+  [\nospell{Reis Christian}]
   {reis-christian}
   {Though it commonly has a prejorative connotation, in the Mozilla Project the term \textbf{bug} is used to refer to any field request for modification in the software, be it an \ul{actual} defect, an enhancement, or a change in functionality. (``bug-driven development'')}
   {reis2002overview}
 
 \qte
-  [Kim Herzig]
+  [\nospell{Kim Herzig}]
   {kim-herzig}
   {In a manual examination of more than 7,000 issue reports from five open-source projects, we found 33.8\% of all bug reports to be \ul{misclassified} threatening bug prediction models, confusing \ul{bugs} and \ul{features}: On average, 39\% of files marked as defective actually never had a bug.}
   {herzig2013s}
@@ -89,7 +89,7 @@ More about it by \citet{bugayenko2018blog0206}.}
 \thought{Report strictly one problem per ticket}
 
 \qte
-  [John Anvik]
+  [\nospell{John Anvik}]
   {john-anvik}
   {People play different roles as they interact with reports in a bug repository. The person who submits the report is the \ul{reporter} or the \ul{submitter} of the report. The \ul{triager} is the person who decides if the report is meaningful and who assigns responsibility of the report to a developer. The one that resolves the report is the \ul{resolver}. A person that contributes a fix for a bug is called a \ul{contributor}.}
   {anvik2006should}
