--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -28,7 +28,7 @@
 \plush{\osbpTitlePage{3}{}}
 
 \qte
-  [Bram Adams]
+  [\nospell{\nospell{Bram Adams}}]
   {bram-adams}
   {We found that \ul{33\%} of the patches makes it into a Linux release, and that most of them need \ul{3 to 6 months} for this.}
   {jiang2013will}
@@ -36,13 +36,13 @@
 \thought[bugayenko2020blog0729]{Make small pull requests}
 
 \qte
-  [Amiangshu Bosu]
+  [\nospell{Amiangshu Bosu}]
   {amiangshu-bosu}
   {We found that the \ul{more files} that are in a change, the \ul{lower} the proportion of \ul{comments} in the code review that will be of value to the author of the change.}
   {bosu2015characteristics}
 
 \qte
-  [Caitlin Sadowski]
+  [\nospell{Caitlin Sadowski}]
   {caitlin-sadowski}
   {A correlation between \ul{change size} and \ul{review quality} is acknowledged by Google and developers are strongly encouraged to make small, incremental changes (with the exception of large deletions and automated refactoring).}
   {sadowski2018modern}
@@ -50,7 +50,7 @@
 \thought[bugayenko2020blog0729]{Don't group your changes}
 
 \qte
-  [Carolyn D. Egelman]
+  [\nospell{Carolyn D. Egelman}]
   {carolyn-egelman}
   {Google categorizes CRs into specific sizes, these sizes are indicated as part of the code review tool and in the notification to the reviewer of the code change... The general advice is to \ul{split} change requests for \ul{easier} and \ul{quicker} reviews when possible.}
   {egelman2020predicting}
@@ -58,7 +58,7 @@
 \thought{Insist on code reviews and merges... politely}
 
 \qte
-  [Marco Ortu]
+  [\nospell{Marco Ortu}]
   {marco-ortu}
   {Our results show that \ul{valence} (expressed in comments received and posted by a reporter) and \ul{joy} expressed in the comments written by a reporter are linked to a \ul{higher likelihood} of issues to be merged. On the contrary, sadness, anger, and arousal expressed in the comments written by a reporter, and anger, arousal, and dominance expressed in the comments received by a reporter, are linked to a lower likelihood of a pull request to be merged.}
   {ortu2020you}
@@ -67,13 +67,13 @@
 Valence, also known as hedonic tone, is a characteristic of emotions that determines their emotional affect (intrinsic appeal or repulsion). Positive valence corresponds to the "goodness" or attractiveness of an object, event, or situation, making it appealing or desirable. Conversely, negative valence relates to ``badness'' or averseness, rendering something unappealing or undesirable. --- \href{https://en.wikipedia.org/wiki/Valence_(psychology)}{Wikipedia}}
 
 \qte
-  [Rahul Iyer]
+  [\nospell{Rahul Iyer}]
   {rahul-iyer}
   {The larger the difference in \ul{personality traits} between the requester and the closer, the more \ul{positive effect} it has on pull request acceptance.}
   {iyer2019effects}
 
 \qte
-  [Denae Ford]
+  [\nospell{Denae Ford}]
   {denae-ford}
   {We observe that both \ul{social} and \ul{technical} aspects are being taken into consideration when deciding upon pull request acceptance. Moreover, we observe that many \ul{more} social aspects are being considered during the experiment than \ul{reported} during the post-experiment survey.}
   {ford2019beyond}
@@ -88,7 +88,7 @@ Valence, also known as hedonic tone, is a characteristic of emotions that determ
 \thought{Be a leader and a boss of a pull request --- be the one who cares}
 
 \qte
-  [Jason Tsay]
+  [\nospell{Jason Tsay}]
   {jason-tsay}
   {We found that the level of a submitter's prior interaction on a project changed how \ul{politely} developers discussed the contribution and the nature of proposed alternative solutions.}
   {tsay2014let}
@@ -109,13 +109,13 @@ Valence, also known as hedonic tone, is a characteristic of emotions that determ
 \thought{Be prepared for criticism about your style, not functionality}
 
 \qte
-  [Jacek Czerwonka]
+  [\nospell{Jacek Czerwonka}]
   {jacek-czerwonka}
   {Only about 15\% of comments provided by reviewers indicate a possible defect, much less a blocking defect. Rather, it is feedback related to the long-term code \ul{maintainability} that comprises a much larger portion of comments provided by reviewers; at least 50\% of all.}
   {czerwonka2015code}
 
 \qte
-  [Valentina Lenarduzzi]
+  [\nospell{Valentina Lenarduzzi}]
   {valentina-lenarduzzi}
   {Unexpectedly, quality \ul{flaws} measured by PMD turned out not to affect the acceptance of a pull request at all. As suggested by other works, other factors such as the \ul{reputation} of the maintainer and the \ul{importance} of the delivered feature might be more important than other qualities in terms of pull request acceptance.}
   {lenarduzzi2021does}
