--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -45,7 +45,7 @@
 \qte
   [\nospell{Yulia Tsvetkov}]
   {yulia-tsvetkov}
-  {Toxic \ul{language} in open source can manifest in multiple ways, including hate speech and microaggressions found also elsewhere online (e.g., Youtube), but also through open-source-specific displays of \ul{entitlement} and \ul{urgency} related to timing expectations.}
+  {Toxic \ul{language} in open source can manifest in multiple ways, including hate speech and microaggressions found also elsewhere online (e.g., YouTube), but also through open-source-specific displays of \ul{entitlement} and \ul{urgency} related to timing expectations.}
   {raman2020stress}
 
 \qte
