--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -36,6 +36,12 @@
 \thought[bugayenko2020blog0729]{Make small pull requests}
 
 \qte
+  [\nospell{Yue Yu}]
+  {yue-yu.jpg}
+  {Our preliminary models show that pull request review latency is complex, and depends on many predictors. Naturally, the size of the pull request matters: the shorter it is the faster it will be reviewed.}
+  {yu2015wait}
+
+\qte
   [\nospell{Amiangshu Bosu}]
   {amiangshu-bosu}
   {We found that the \ul{more files} that are in a change, the \ul{lower} the proportion of \ul{comments} in the code review that will be of value to the author of the change.}
