--- a/main.bib
+++ b/main.bib
@@ -555,3 +555,12 @@
   year={2012},
   publisher={IEEE}
 }
+
+@inproceedings{yu2015wait,
+  title={{Wait For It: Determinants of Pull Request Evaluation Latency on GitHub}},
+  author={Yu, Yue and Wang, Huaimin and Filkov, Vladimir and Devanbu, Premkumar and Vasilescu, Bogdan},
+  booktitle={{Proceedings of the 12th Working Conference on Mining Software Repositories}},
+  pages={367--371},
+  year={2015},
+  organization={IEEE}
+}
