--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -70,9 +70,11 @@
 \qte
   [\nospell{Caitlin Sadowski}]
   {caitlin-sadowski}
-  {As developers build experience working at Google, the average number of comments on their changes decreases... Developers at Google who have started within the past year typically have more than twice as many comments per change.}
+  {As developers build experience working at Google, the average number of comments on their changes \ul{decreases}... Developers at Google who have started within the past year typically have more than \ul{twice} as many comments per change.}
   {sadowski2018modern}
-\pitch{\includegraphics[width=.95\linewidth]{tenure.png}}
+\pitch{
+  \includegraphics[width=.6\linewidth]{tenure.png}
+  \source{sadowski2018modern}}
 
 \thought[bugayenko2015blog0209]{Raise issues, don't resolve them!}
 
